# 9.2

./: .coverage  .gitignore  README.md  api_mypy.txt  api_pytest.txt  file_mypy.txt  file_pytest.txt  main.py  pyproject.toml  requirements_api.txt  requirements_files.txt
src/: external_api.py  file_readers.py  masks.py  processing.py  utils.py  widget.py
tests/: conftest.py  test_external_api.py  test_file_readers.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
